--- a/workflows/ai_surgical_video/python/config.yaml
+++ b/workflows/ai_surgical_video/python/config.yaml
@@ -1,5 +1,5 @@
 %YAML 1.2
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -27,6 +27,10 @@ aja: # AJASourceOp
   height: 1080
   rdma: true
   enable_overlay: false
+
+aja_format_converter: # converts to rgb888 (drop alpha channel)
+  in_dtype: "rgba8888"
+  out_tensor_name: ""
 
 out_of_body_format_converter:
   out_tensor_name: source_video
