--- a/applications/video_streaming/video_streaming_server/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_server/CMakeLists.txt
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20)
-project(streaming_server_demo LANGUAGES NONE)
+project(video_streaming_server LANGUAGES NONE)
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
