Port older software loopback implementation
Signed-off-by: Dylan Eustice <deustice@nvidia.com>

--- a/applications/adv_networking_bench/adv_networking_bench_default_rx_multi_q.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_default_rx_multi_q.yaml
@@ -28,6 +28,7 @@ advanced_network:
     master_core: 3
     debug: false
     log_level: "info"
+    loopback: ""
 
     memory_regions:
     - name: "Data_RX_GPU1"
