--- a/applications/adv_networking_bench/adv_networking_bench_default_sw_loopback.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_default_sw_loopback.yaml
@@ -28,7 +28,7 @@ advanced_network:
     master_core: 3
     debug: false
     log_level: "info"
-    loopback: ""
+    loopback: "sw"
 
     memory_regions:
     - name: "Data_TX_GPU"
