--- a/applications/adv_networking_bench/adv_networking_bench_default_tx_rx_multi_q_hds.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_default_tx_rx_multi_q_hds.yaml
@@ -27,6 +27,7 @@ advanced_network:
     master_core: 3
     debug: false
     log_level: info
+    loopback: ""
     tx_meta_buffers: 4096
     rx_meta_buffers: 4096
     memory_regions:
