--- a/applications/adv_networking_bench/adv_networking_bench_gpunetio_tx_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_gpunetio_tx_rx.yaml
@@ -26,6 +26,7 @@ advanced_network:
     manager: "gpunetio"
     master_core: 0 # Master CPU core
     log_level: "warn"
+    loopback: ""
 
     memory_regions:
     - name: "Data_TX_GPU"
