--- a/applications/adv_networking_bench/adv_networking_bench_rmax_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rmax_rx.yaml
@@ -27,6 +27,7 @@ advanced_network:
     master_core: 5              # Master CPU core
     debug: 1
     log_level: "warn"
+    loopback: ""
 
     memory_regions:
     - name: "Data_RX_CPU"
