--- a/benchmarks/realtime_threads_benchmarking/python/CMakeLists.txt
+++ b/benchmarks/realtime_threads_benchmarking/python/CMakeLists.txt
@@ -13,5 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(python)
-add_subdirectory(cpp)
+file(RELATIVE_PATH app_relative_dest_path ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_custom_target(python_realtime_threads_benchmark ALL
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/realtime_thread_benchmark.py" ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS "realtime_thread_benchmark.py"
+  BYPRODUCTS "realtime_thread_benchmark.py"
+)
