fix: Move test definitions to main CMakeLists.txt for proper CTest discovery
- Move all test definitions from subdirectories to applications/video_streaming/CMakeLists.txt
- Remove duplicate test definitions from cpp/ and python/ subdirectories
- Add include(CTest) at main application level for proper test registration
- Ensure tests are discoverable by HoloHub testing framework

This follows the HoloHub pattern where tests should be defined at the main
application level rather than in language-specific subdirectories.

Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming/CMakeLists.txt
+++ b/applications/video_streaming/CMakeLists.txt
@@ -21,3 +21,45 @@ include(CTest)
 
 add_holohub_application(video_streaming_client DEPENDS OPERATORS streaming_client)
 add_holohub_application(video_streaming_server DEPENDS OPERATORS streaming_server)
+
+# Testing infrastructure
+if(BUILD_TESTING)
+  # Video Streaming Client Tests
+  add_test(NAME video_streaming_client_cpp_test
+           COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/cpp/run_test.sh"
+                   "$<TARGET_FILE:streaming_client_demo>"
+                   "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/testing/video_streaming_client_testing.yaml"
+                   "${HOLOHUB_DATA_DIR}/endoscopy"
+           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+  
+  set_tests_properties(video_streaming_client_cpp_test PROPERTIES
+                       TIMEOUT 90
+                       PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingClient.*test successful"
+                       FAIL_REGULAR_EXPRESSION "Test FAILED:")
+
+  add_test(NAME video_streaming_client_python_test
+           COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/python/run_test.sh"
+                   "${CMAKE_BINARY_DIR}/applications/video_streaming/video_streaming_client/python"
+                   "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/python/streaming_client_demo.py"
+           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+  set_tests_properties(video_streaming_client_python_test PROPERTIES
+                       ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/python/lib:$ENV{PYTHONPATH}"
+                       TIMEOUT 120
+                       PASS_REGULAR_EXPRESSION "Test PASSED: StreamingClient functionality validated"
+                       FAIL_REGULAR_EXPRESSION "Test FAILED:")
+
+  # Video Streaming Server Tests
+  add_test(NAME video_streaming_server_cpp_test
+           COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_server/cpp/run_test.sh"
+                   "$<TARGET_FILE:streaming_server_demo>"
+                   "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_server/testing/video_streaming_server_testing.yaml"
+                   "${HOLOHUB_DATA_DIR}/endoscopy"
+           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+  set_tests_properties(video_streaming_server_cpp_test PROPERTIES
+                       TIMEOUT 120
+                       PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingServer.*test successful"
+                       FAIL_REGULAR_EXPRESSION "Test FAILED:")
+
+endif()
