--- a/applications/video_streaming/video_streaming_client/python/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/python/CMakeLists.txt
@@ -25,3 +25,9 @@ install(
   FILES streaming_client_demo.py
   DESTINATION bin
 )
+
+
+install(
+  FILES streaming_client_demo.py
+  DESTINATION bin/video_streaming_client/python
+)
