--- a/applications/video_streaming/CMakeLists.txt
+++ b/applications/video_streaming/CMakeLists.txt
@@ -24,42 +24,46 @@ add_holohub_application(video_streaming_server DEPENDS OPERATORS streaming_serve
 
 # Testing infrastructure
 if(BUILD_TESTING)
-  # Video Streaming Client Tests
-  add_test(NAME video_streaming_client_cpp_test
-           COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/cpp/run_test.sh"
-                   "$<TARGET_FILE:streaming_client_demo>"
-                   "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/testing/video_streaming_client_testing.yaml"
-                   "${HOLOHUB_DATA_DIR}/endoscopy"
-           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-  
-  set_tests_properties(video_streaming_client_cpp_test PROPERTIES
-                       TIMEOUT 90
-                       PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingClient.*test successful"
-                       FAIL_REGULAR_EXPRESSION "Test FAILED:")
+  # Video Streaming Client Tests (only if client target exists)
+  if(TARGET streaming_client_demo)
+    add_test(NAME video_streaming_client_cpp_test
+             COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/cpp/run_test.sh"
+                     "$<TARGET_FILE:streaming_client_demo>"
+                     "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/testing/video_streaming_client_testing.yaml"
+                     "${HOLOHUB_DATA_DIR}/endoscopy"
+             WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    
+    set_tests_properties(video_streaming_client_cpp_test PROPERTIES
+                         TIMEOUT 90
+                         PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingClient.*test successful"
+                         FAIL_REGULAR_EXPRESSION "Test FAILED:")
 
-  add_test(NAME video_streaming_client_python_test
-           COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/python/run_test.sh"
-                   "${CMAKE_BINARY_DIR}/applications/video_streaming/video_streaming_client/python"
-                   "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/python/streaming_client_demo.py"
-           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    add_test(NAME video_streaming_client_python_test
+             COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/python/run_test.sh"
+                     "${CMAKE_BINARY_DIR}/applications/video_streaming/video_streaming_client/python"
+                     "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client/python/streaming_client_demo.py"
+             WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
-  set_tests_properties(video_streaming_client_python_test PROPERTIES
-                       ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/python/lib:$ENV{PYTHONPATH}"
-                       TIMEOUT 120
-                       PASS_REGULAR_EXPRESSION "Test PASSED: StreamingClient functionality validated"
-                       FAIL_REGULAR_EXPRESSION "Test FAILED:")
+    set_tests_properties(video_streaming_client_python_test PROPERTIES
+                         ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/python/lib:$ENV{PYTHONPATH}"
+                         TIMEOUT 120
+                         PASS_REGULAR_EXPRESSION "Test PASSED: StreamingClient functionality validated"
+                         FAIL_REGULAR_EXPRESSION "Test FAILED:")
+  endif()
 
-  # Video Streaming Server Tests
-  add_test(NAME video_streaming_server_cpp_test
-           COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_server/cpp/run_test.sh"
-                   "$<TARGET_FILE:streaming_server_demo>"
-                   "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_server/testing/video_streaming_server_testing.yaml"
-                   "${HOLOHUB_DATA_DIR}/endoscopy"
-           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+  # Video Streaming Server Tests (only if server target exists)
+  if(TARGET streaming_server_demo)
+    add_test(NAME video_streaming_server_cpp_test
+             COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_server/cpp/run_test.sh"
+                     "$<TARGET_FILE:streaming_server_demo>"
+                     "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_server/testing/video_streaming_server_testing.yaml"
+                     "${HOLOHUB_DATA_DIR}/endoscopy"
+             WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
-  set_tests_properties(video_streaming_server_cpp_test PROPERTIES
-                       TIMEOUT 120
-                       PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingServer.*test successful"
-                       FAIL_REGULAR_EXPRESSION "Test FAILED:")
+    set_tests_properties(video_streaming_server_cpp_test PROPERTIES
+                         TIMEOUT 120
+                         PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingServer.*test successful"
+                         FAIL_REGULAR_EXPRESSION "Test FAILED:")
+  endif()
 
 endif()
