Add Green Context CUDA kernel launch-start time benchmark
- New HoloHub benchmark application for measuring CUDA kernel launch-start
  time improvements with NVIDIA Green Context technology
- Uses CUPTI for precise GPU timing measurements under realistic contention
- Includes controlled A/B testing (baseline vs Green Context partitions)
- Comprehensive documentation with usage, troubleshooting, and tuning guides
- Supports configurable load intensity, workload size, and thread configurations

Signed-off-by: Cheng-Rong Lai <chengrongl@nvidia.com>

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -15,3 +15,4 @@
 
 add_holohub_application(model_benchmarking)
 add_holohub_application(realtime_threads_benchmarking)
+add_holohub_application(green_context_benchmarking)
