Add streaming client/server demo applications and operators.
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -105,6 +105,9 @@ add_holohub_application(psd_pipeline DEPENDS
                                   vita49_psd_packetizer
                                   data_writer)
 
+add_holohub_application(streaming_client_demo_04_80_streaming DEPENDS OPERATORS streaming_client_04_80)
+add_holohub_application(streaming_server_demo_04_80_tensor_streaming DEPENDS OPERATORS streaming_server_04_80_tensor)                                  
+
 add_holohub_application(ultrasound_segmentation DEPENDS OPERATORS aja_source)
 
 add_holohub_application(velodyne_lidar_app DEPENDS
