--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -36,6 +36,8 @@ add_holohub_operator(qt_video)
 add_holohub_operator(realsense_camera)
 add_subdirectory(orsi)
 add_holohub_operator(slang_shader)
+add_holohub_operator(streaming_client_04_80)
+add_holohub_operator(streaming_server_04_80_tensor)
 add_holohub_operator(tensor_to_file)
 add_holohub_operator(tensor_to_video_buffer)
 add_holohub_operator(tool_tracking_postprocessor)
