Add streaming client/server demo applications and operators.
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -41,6 +41,8 @@ add_holohub_operator(streaming_client)
 add_holohub_operator(streaming_server)
 add_subdirectory(orsi)
 add_holohub_operator(slang_shader)
+add_holohub_operator(streaming_client_04_80)
+add_holohub_operator(streaming_server_04_80_tensor)
 add_holohub_operator(tensor_to_file)
 add_holohub_operator(tensor_to_video_buffer)
 add_holohub_operator(tool_tracking_postprocessor)
