--- a/operators/streaming_client_enhanced/python/CMakeLists.txt
+++ b/operators/streaming_client_enhanced/python/CMakeLists.txt
@@ -17,5 +17,5 @@ include(pybind11_add_holohub_module)
 pybind11_add_holohub_module(
     CPP_CMAKE_TARGET streaming_client
     CLASS_NAME "StreamingClientOp"
-    SOURCES streaming_client_04_80.cpp
+    SOURCES streaming_client_enhanced.cpp
 ) 
