Update website structure and content for NVIDIA Holoscan Reference Applications
- Changed site name to "NVIDIA Holoscan Reference Applications" in mkdocs.yml.
- Updated index.md to use a new template and simplified content.
- Added new images for application defaults and Jetson AI labs.
- Created .gitignore for overrides pages and added CSS for styling.
- Implemented a new home.html page for the website with a custom layout.
- Introduced common utilities and scripts for generating featured applications.
- Enhanced the generate_pages.py script to update the home page with component counts.

Signed-off-by: Julien Jomier <jjomier@nvidia.com>

--- a/doc/website/mkdocs.yml
+++ b/doc/website/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Holoscan Reference Applications
+site_name: NVIDIA Holoscan Reference Applications
 site_url: https://nvidia-holoscan.github.io/holohub
 repo_url: https://github.com/nvidia-holoscan/holohub
 repo_name: nvidia-holoscan/holohub
@@ -53,6 +53,7 @@ plugins:
 #      fallback_to_build_date: true
   - gen-files:
       scripts:
+        - scripts/generate_featured_apps.py
         - scripts/generate_pages.py
   - macros
   - tags
@@ -87,7 +88,8 @@ watch:
   - ../../tutorials
   - ../../benchmarks
   - ../../workflows
-  - overrides
+  - overrides/assets
+  - overrides/pages
   - scripts
 
 markdown_extensions:
