--- a/applications/multiai_endoscopy/cpp/post-proc-cpu/CMakeLists.txt
+++ b/applications/multiai_endoscopy/cpp/post-proc-cpu/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -32,7 +32,7 @@ target_link_libraries(multiai_endoscopy
   holoscan::ops::inference
   holoscan::ops::segmentation_postprocessor
   holoscan::ops::holoviz
-  holoscan::aja
+  $<TARGET_NAME_IF_EXISTS:holoscan::aja>
 )
 
 # Download the associated dataset if needed
@@ -86,7 +86,7 @@ if(BUILD_TESTING)
     holoscan::ops::inference
     holoscan::ops::segmentation_postprocessor
     holoscan::ops::holoviz
-    holoscan::aja
+    $<TARGET_NAME_IF_EXISTS:holoscan::aja>
   )
 
   # Add the test and make sure it runs
