--- a/applications/ultrasound_segmentation/cpp/CMakeLists.txt
+++ b/applications/ultrasound_segmentation/cpp/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2022-2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -31,7 +31,7 @@ target_link_libraries(ultrasound_segmentation
    holoscan::ops::inference
    holoscan::ops::segmentation_postprocessor
    holoscan::ops::holoviz
-   holoscan::aja
+   $<TARGET_NAME_IF_EXISTS:holoscan::aja>
 )
 
 # Download the associated dataset if needed
@@ -84,7 +84,7 @@ if(BUILD_TESTING)
     holoscan::ops::inference
     holoscan::ops::segmentation_postprocessor
     holoscan::ops::holoviz
-    holoscan::aja
+    $<TARGET_NAME_IF_EXISTS:holoscan::aja>
   )
 
   # Add the test and make sure it runs
