--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -42,7 +42,9 @@ add_holohub_operator(streaming_server)
 add_subdirectory(orsi)
 add_holohub_operator(slang_shader)
 add_holohub_operator(streaming_client_enhanced)
+add_holohub_operator(streaming_client_enhanced_test)
 add_holohub_operator(streaming_server_enhanced)
+add_holohub_operator(streaming_server_enhanced_test)
 add_holohub_operator(tensor_to_file)
 add_holohub_operator(tensor_to_video_buffer)
 add_holohub_operator(tool_tracking_postprocessor)
