Add automatic plot generation to C++ realtime thread benchmark
- Create plot_results.py script to generate timing analysis plots from JSON output
- Integrate automatic plotting into C++ benchmark after JSON generation
- Add CMake configuration to copy plotting script to build directory
- Generate same plots as Python version: timing_over_time.png and simple_histograms.png
- Enable single-command workflow: C++ benchmark now produces both console output and visual plots
- Maintain compatibility with existing JSON output format

Signed-off-by: Cheng-Rong Lai <chengrongl@nvidia.com>

--- a/benchmarks/realtime_threads_benchmarking/cpp/CMakeLists.txt
+++ b/benchmarks/realtime_threads_benchmarking/cpp/CMakeLists.txt
@@ -32,6 +32,11 @@ target_link_libraries(realtime_thread_benchmark
 # Set C++ standard
 target_compile_features(realtime_thread_benchmark PRIVATE cxx_std_17)
 
+# Copy plotting script to build directory
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/plot_results.py
+               ${CMAKE_CURRENT_BINARY_DIR}/plot_results.py
+               COPYONLY)
+
 # Install the executable
 install(TARGETS realtime_thread_benchmark
   RUNTIME DESTINATION bin
