Fix pytest tests and add comprehensive testing infrastructure
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/streaming_server_demo_enhanced_tests/CMakeLists.txt
+++ b/applications/streaming_server_demo_enhanced_tests/CMakeLists.txt
@@ -27,6 +27,40 @@ if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
 endif()
 
+# Add operator pytest tests when BUILD_TESTING is enabled
+if(BUILD_TESTING)
+  # Import operator pytest tests for streaming_server_enhanced_test
+  set(OPERATOR_TESTS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/operators/streaming_server_enhanced_test/testing")
+  set(OPERATOR_TESTS_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/operator_tests")
+  
+  # Copy operator pytest files to application's test directory
+  if(EXISTS "${OPERATOR_TESTS_SOURCE_DIR}")
+    file(COPY "${OPERATOR_TESTS_SOURCE_DIR}/" DESTINATION "${OPERATOR_TESTS_BINARY_DIR}")
+
+    # Register operator pytest tests with CTest (only if pytest is available)
+    find_package(Python3 REQUIRED COMPONENTS Interpreter)
+    execute_process(
+        COMMAND ${Python3_EXECUTABLE} -c "import pytest"
+        RESULT_VARIABLE pytest_available
+        ERROR_QUIET
+    )
+    
+    if(pytest_available EQUAL 0)
+      include(add_python_tests)
+      add_python_tests(
+        INPUT "operator_tests"
+        PYTEST_ARGS "-v" "-s" "--tb=short" "--log-cli-level=INFO" "--build-dir=${CMAKE_BINARY_DIR}"
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+      )
+      message(STATUS "Added streaming_server_enhanced_test operator pytest tests to application test suite")
+    else()
+      message(STATUS "pytest not available - skipping operator pytest tests. Install pytest to enable.")
+    endif()
+  else()
+    message(STATUS "Streaming server operator tests not found at ${OPERATOR_TESTS_SOURCE_DIR}")
+  endif()
+endif()
+
 # Copy Python files to build directory
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/python/streaming_server_demo.py
